fix: getDiariesByMonth return 코드 간소화